Some more link fixes found by htmlproofer

--- a/source/documentation/code/index.html
+++ b/source/documentation/code/index.html
@@ -17,11 +17,11 @@ breadcrumbs: true
                     </thead>
                     <tbody>
                       <tr>
-                        <td><a href="code/libraries.html">Libraries</a></td>
+                        <td><a href="/documentation/code/libraries">Libraries</a></td>
                         <td>Libraries in Python, Ruby or JavaScript to get your project started</td>
                       </tr>
                       <tr>
-                        <td><a href="code/tools.html">Tools</a></td>
+                        <td><a href="/documentation/code/tools">Tools</a></td>
                         <td>A selection of finished tools for chat integration, reporting or scheduling PagerDuty. Also includes 2-way integrations.</td>
                       </tr>
                     </tbody>
@@ -43,4 +43,4 @@ breadcrumbs: true
                     {% endfor %}
                     </tbody>
                   </table>
-                  <p>Please review the <a href='disclaimer.html'>Disclaimer</a> prior to downloading sample code.</p>
+                  <p>Please review the <a href='/documentation/code/disclaimer'>Disclaimer</a> prior to downloading sample code.</p>
