--- a/source/documentation/integration/events/trigger.html
+++ b/source/documentation/integration/events/trigger.html
@@ -2,7 +2,7 @@
 title: PagerDuty Developer
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="../events.html">Integration</a></li><span class="divider">/</span><li><a href="../events.html">Events</a></li><span class="divider">/</span><li>Trigger</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/integration/events/">Integration</a></li><span class="divider">/</span><li><a href="/documentation/integration/events/">Events</a></li><span class="divider">/</span><li>Trigger</li></ul>
 <div class='section'>
 <title></title>
 <h1 class="title">Trigger Events</h1>
