--- a/source/documentation/rest/escalation_policies/delete.html
+++ b/source/documentation/rest/escalation_policies/delete.html
@@ -5,7 +5,7 @@ permalink: /documentation/rest/escalation_policies/delete/
 redirect_from:
   - /documentation/rest/escalation_policies/delete.html
 ---
-<ul class="breadcrumb"><li><a href="../../rest.html">REST API</a></li><span class="divider">/</span><li><a href="../escalation_policies.html">Escalation Policies</a></li><span class="divider">/</span><li>Delete</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/escalation_policies/">Escalation Policies</a></li><span class="divider">/</span><li>Delete</li></ul>
 <div class='section'>
 <h1 class="title">DELETE escalation_policies/:id</h1><p>Deletes an existing escalation policy and rules. The escalation policy must not be in use by any services.</p>
 <h3>Resource URL</h3><div class="prism action-url language-bash"><pre>DELETE https://<span class="base_url contenteditable persist" contenteditable="true">&lt;subdomain&gt;</span>.pagerduty.com/api/v1/escalation_policies/<span class="url_param contenteditable" contenteditable="true">:id</span></pre></div><h3>Example</h3>
