--- a/source/documentation/rest/escalation_policies/escalation_rules/create.html
+++ b/source/documentation/rest/escalation_policies/escalation_rules/create.html
@@ -2,7 +2,7 @@
 title: PagerDuty Developer
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="../../../rest.html">REST API</a></li><span class="divider">/</span><li><a href="../../escalation_policies.html">Escalation Policies</a></li><span class="divider">/</span><li><a href="../escalation_rules.html">Escalation Rules</a></li><span class="divider">/</span><li>Create</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/escalation_policies">Escalation Policies</a></li><span class="divider">/</span><li><a href="/documentation/rest/escalation_policies/escalation_rules">Escalation Rules</a></li><span class="divider">/</span><li>Create</li></ul>
 <div class='section'>
 <h1 class="title">POST escalation_policies/:escalation_policy_id/escalation_rules</h1><p>Creates a new escalation rule for an escalation policy and appends it to the end of the existing escalation rules.</p>
 <h3>Resource URL</h3><div class="prism action-url language-bash"><pre>POST https://<span class="base_url contenteditable persist" contenteditable="true">&lt;subdomain&gt;</span>.pagerduty.com/api/v1/escalation_policies/<span class="url_param contenteditable" contenteditable="true">:escalation_policy_id</span>/escalation_rules</pre></div><h3>Parameters</h3><div class="table-container"><table class="table table-striped"><thead><th>Name</th><th>Type</th><th>Required</th><th>Description</th></thead><tbody><tr><td>escalation_delay_in_minutes</td><td><a href="/documentation/rest/types#int">Integer</a></td><td>Yes</td><td>The escalation timeout in minutes. If an incident is not acknowledged within this timeout then it will escalate onto the next escalation rule.
