--- a/source/documentation/rest/escalation_policies/escalation_rules/index.html
+++ b/source/documentation/rest/escalation_policies/escalation_rules/index.html
@@ -2,7 +2,7 @@
 title: Escalation Rules API
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="../../rest.html">REST API</a></li><span class="divider">/</span><li><a href="../escalation_policies.html">Escalation Policies</a></li><span class="divider">/</span><li>Escalation Rules</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/escalation_policies">Escalation Policies</a></li><span class="divider">/</span><li>Escalation Rules</li></ul>
 <div class='section'>
 <title></title>
 <h1 class="title">Escalation Rules API</h1>
