--- a/source/documentation/rest/escalation_policies/escalation_rules/list.html
+++ b/source/documentation/rest/escalation_policies/escalation_rules/list.html
@@ -2,7 +2,7 @@
 title: PagerDuty Developer
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="../../../rest.html">REST API</a></li><span class="divider">/</span><li><a href="../../escalation_policies.html">Escalation Policies</a></li><span class="divider">/</span><li><a href="../escalation_rules.html">Escalation Rules</a></li><span class="divider">/</span><li>List</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/escalation_policies">Escalation Policies</a></li><span class="divider">/</span><li><a href="/documentation/rest/escalation_policies/escalation_rules">Escalation Rules</a></li><span class="divider">/</span><li>List</li></ul>
 <div class='section'>
 <h1 class="title">GET escalation_policies/:escalation_policy_id/escalation_rules</h1><p>List all the escalation rules for an existing escalation policy.</p>
 <h3>Resource URL</h3><div class="prism action-url language-bash"><pre>GET https://<span class="base_url contenteditable persist" contenteditable="true">&lt;subdomain&gt;</span>.pagerduty.com/api/v1/escalation_policies/<span class="url_param contenteditable" contenteditable="true">:escalation_policy_id</span>/escalation_rules</pre></div><h3>Parameters</h3><p>None</p>
