--- a/source/documentation/rest/escalation_policies/escalation_rules/show.html
+++ b/source/documentation/rest/escalation_policies/escalation_rules/show.html
@@ -2,7 +2,7 @@
 title: PagerDuty Developer
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="../../../rest.html">REST API</a></li><span class="divider">/</span><li><a href="../../escalation_policies.html">Escalation Policies</a></li><span class="divider">/</span><li><a href="../escalation_rules.html">Escalation Rules</a></li><span class="divider">/</span><li>Show</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/escalation_policies">Escalation Policies</a></li><span class="divider">/</span><li><a href="/documentation/rest/escalation_policies/escalation_rules">Escalation Rules</a></li><span class="divider">/</span><li>Show</li></ul>
 <div class='section'>
 <h1 class="title">GET escalation_policies/:escalation_policy_id/escalation_rules/:id</h1><p>Show the escalation rule for an existing escalation policy.</p>
 <h3>Resource URL</h3><div class="prism action-url language-bash"><pre>GET https://<span class="base_url contenteditable persist" contenteditable="true">&lt;subdomain&gt;</span>.pagerduty.com/api/v1/escalation_policies/<span class="url_param contenteditable" contenteditable="true">:escalation_policy_id</span>/escalation_rules/<span class="url_param contenteditable" contenteditable="true">:id</span></pre></div><h3>Escalation Rule Response Fields</h3><div class="table-container"><table class="table table-striped"><thead><th>Name</th><th>Type</th><th>Description</th></thead><tbody><tr><td>id</td><td><a href="/documentation/rest/types#string">String</a></td><td>The ID of the escalation rule.
