--- a/source/documentation/rest/escalation_policies/on_call.html
+++ b/source/documentation/rest/escalation_policies/on_call.html
@@ -2,7 +2,7 @@
 title: PagerDuty Developer
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="../escalation_policies.html">Escalation Policies</a></li><span class="divider">/</span><li>On Call</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/escalation_policies/">Escalation Policies</a></li><span class="divider">/</span><li>On Call</li></ul>
 <div class='section'>
 <h1 class="title">GET escalation_policies/on_call</h1><p>List all the existing escalation policies with currently on-call users.</p>
 <p>If the <code>start</code> and <code>end</code> of an on-call object are <code>null</code>, then the user is always on-call for an escalation policy level.</p>
