--- a/source/documentation/rest/incidents/notes/index.html
+++ b/source/documentation/rest/incidents/notes/index.html
@@ -6,5 +6,5 @@ layout: main
 <div class='section'>
 <title></title>
 <h1 class="title">Incident Notes API</h1>
-<table class="table action_index"><caption>The Incident Notes API allows you to add notes to a specified incident.</caption><thead><th>Resource</th><th>Description</th></thead><tbody><tr><td><a href="/documentation/rest/incidents/notes/list">GET incidents/:incident_id/notes</a></td><td>List existing notes for the specified incident.</td></tr><tr><td><a href="/documentation/rest/incidents/notes/create.html">POST incidents/:incident_id/notes</a></td><td>Create a new note for the specified incident.</td></tr>
+<table class="table action_index"><caption>The Incident Notes API allows you to add notes to a specified incident.</caption><thead><th>Resource</th><th>Description</th></thead><tbody><tr><td><a href="/documentation/rest/incidents/notes/list">GET incidents/:incident_id/notes</a></td><td>List existing notes for the specified incident.</td></tr><tr><td><a href="/documentation/rest/incidents/notes/create">POST incidents/:incident_id/notes</a></td><td>Create a new note for the specified incident.</td></tr>
 </tbody></table></div>
