--- a/source/documentation/rest/services/list.html
+++ b/source/documentation/rest/services/list.html
@@ -48,7 +48,7 @@ layout: main
 <li><code>sql_monitor</code></li>
 </ul>
 </td></tr><tr><td>escalation_policy</td><td><a href="/documentation/rest/types#object">Object</a></td><td>An object containing the ID and name of the escalation policy used by this service. Only present if <code>escalation_policy</code> is passed as an argument.
-</td></tr><tr><td>email_filters</td><td><a href="/documentation/rest/types#object">Object</a></td><td>An object containing inline <a href="email_filters.html">Email Filters</a>. Only present if <code>email_filters</code> is passed as an argument. Note that only <code>generic_email</code> services have Email Filters.
+</td></tr><tr><td>email_filters</td><td><a href="/documentation/rest/types#object">Object</a></td><td>An object containing inline <a href="/documentation/rest/services/email_filters">Email Filters</a>. Only present if <code>email_filters</code> is passed as an argument. Note that only <code>generic_email</code> services have Email Filters.
 </td></tr><tr><td>severity_filter</td><td><a href="/documentation/rest/types#string">String</a></td><td>Specifies what severity levels will create a new open incident.
 <p>For Keynote it can be one of:</p>
 <ul>
