--- a/source/documentation/code/libraries.html
+++ b/source/documentation/code/libraries.html
@@ -27,4 +27,4 @@ nav:
                         </tr>
                       {% endfor %}
                     </table>
-                    <p>Please review the <a href='disclaimer.html'>Disclaimer</a> prior to downloading sample code.</p>
+                    <p>Please review the <a href='/documentation/code/disclaimer'>Disclaimer</a> prior to downloading sample code.</p>
