--- a/source/documentation/code/tools.html
+++ b/source/documentation/code/tools.html
@@ -49,4 +49,4 @@ nav:
                   {% endif %}
                 {% endfor %}
                   </table>
-                  <p>Please review the <a href='disclaimer.html'>Disclaimer</a> prior to downloading sample code.</p>
+                  <p>Please review the <a href='/documentation/code/disclaimer'>Disclaimer</a> prior to downloading sample code.</p>
