--- a/source/documentation/rest/escalation_policies/escalation_rules/update.html
+++ b/source/documentation/rest/escalation_policies/escalation_rules/update.html
@@ -3,7 +3,7 @@ title: PagerDuty Developer
 layout: main
 ---
 
-<ul class="breadcrumb"><li><a href="../../../rest.html">REST API</a></li><span class="divider">/</span><li><a href="../../escalation_policies.html">Escalation Policies</a></li><span class="divider">/</span><li><a href="../escalation_rules.html">Escalation Rules</a></li><span class="divider">/</span><li>Update</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/escalation_policies">Escalation Policies</a></li><span class="divider">/</span><li><a href="/documentation/rest/escalation_policies/escalation_rules">Escalation Rules</a></li><span class="divider">/</span><li>Update</li></ul>
 <div class='section'>
 <h1 class="title">PUT escalation_policies/:escalation_policy_id/escalation_rules/:id</h1><p>Updates an escalation rule.</p>
 <h3>Resource URL</h3><div class="prism action-url language-bash"><pre>PUT https://<span class="base_url contenteditable persist" contenteditable="true">&lt;subdomain&gt;</span>.pagerduty.com/api/v1/escalation_policies/<span class="url_param contenteditable" contenteditable="true">:escalation_policy_id</span>/escalation_rules/<span class="url_param contenteditable" contenteditable="true">:id</span></pre></div><h3>Parameters</h3><div class="table-container"><table class="table table-striped"><thead><th>Name</th><th>Type</th><th>Required</th><th>Description</th></thead><tbody><tr><td>escalation_delay_in_minutes</td><td><a href="/documentation/rest/types#int">Integer</a></td><td>No</td><td>The escalation timeout in minutes. If an incident is not acknowledged within this timeout then it will escalate onto the next escalation rule.
