--- a/source/documentation/rest/escalation_policies/index.html
+++ b/source/documentation/rest/escalation_policies/index.html
@@ -6,7 +6,7 @@ redirect_from:
   - /documentation/rest/escalation_policies/escalation_policies.html
 ---
                 <ul class="breadcrumb">
-                  <li><a href="../rest.html">REST API</a></li>
+                  <li><a href="/documentation/rest">REST API</a></li>
                   <span class="divider">/</span>
                   <li>Escalation Policies</li>
                 </ul>
@@ -15,5 +15,5 @@ redirect_from:
                   <h1 class="title">Escalation Policies API</h1>
                   <table class="table action_index">
                     <caption>This API lets you access and manipulate escalation policies and rules.</caption>
-                    <thead><th>Resource</th><th>Description</th></thead><tbody><tr><td><a href="list.html">GET escalation_policies</a></td><td>List existing escalation policies.</td></tr><tr><td><a href="create.html">POST escalation_policies</a></td><td>Create a new escalation policy.</td></tr><tr><td><a href="show.html">GET escalation_policies/:id</a></td><td>Get details about an escalation policy.</td></tr><tr><td><a href="update.html">PUT escalation_policies/:id</a></td><td>Update an escalation policy.</td></tr><tr><td><a href="delete.html">DELETE escalation_policies/:id</a></td><td>Delete an escalation policy.</td></tr>
+                    <thead><th>Resource</th><th>Description</th></thead><tbody><tr><td><a href="/documentation/rest/escalation_policies/list">GET escalation_policies</a></td><td>List existing escalation policies.</td></tr><tr><td><a href="/documentation/rest/escalation_policies/create">POST escalation_policies</a></td><td>Create a new escalation policy.</td></tr><tr><td><a href="/documentation/rest/escalation_policies/show">GET escalation_policies/:id</a></td><td>Get details about an escalation policy.</td></tr><tr><td><a href="/documentation/rest/escalation_policies/update">PUT escalation_policies/:id</a></td><td>Update an escalation policy.</td></tr><tr><td><a href="/documentation/rest/escalation_policies/delete">DELETE escalation_policies/:id</a></td><td>Delete an escalation policy.</td></tr>
 </tbody></table></div>
