Some more things proofer found

--- a/source/documentation/rest/users/contact_methods/update.html
+++ b/source/documentation/rest/users/contact_methods/update.html
@@ -2,7 +2,7 @@
 title: PagerDuty Developer
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="/documention/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/users">Users</a></li><span class="divider">/</span><li><a href="/documentation/rest/users/contact_methods">Contact Methods</a></li><span class="divider">/</span><li>Update</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/users">Users</a></li><span class="divider">/</span><li><a href="/documentation/rest/users/contact_methods">Contact Methods</a></li><span class="divider">/</span><li>Update</li></ul>
 <div class='section'>
 <h1 class="title">PUT users/:user_id/contact_methods/:id</h1><p>
 Update an existing contact method of a given user. Note that you cannot change the type of an existing method.
