Update paths in release notes

--- a/source/release_notes.html
+++ b/source/release_notes.html
@@ -8,7 +8,7 @@ redirect_from:
 <title></title>
 <div class='section'>
 <h3 class='pull-right'>
-<a class='release-rss' href='release_notes.rss'>
+<a class='release-rss' href='/release_notes.rss'>
 <i class='icon-rss'></i>
 </a>
 </h3>
@@ -44,7 +44,7 @@ March 4, 2014
 </td>
 <td>
 <ul>
-<li>New on-call endpoints are available for <a href="documentation/rest/users/on_call.html">users</a> and <a href="documentation/rest/escalation_policies/on_call.html">escalation policies</a>.</li>
+<li>New on-call endpoints are available for <a href="/documentation/rest/users/on_call">users</a> and <a href="/documentation/rest/escalation_policies/on_call">escalation policies</a>.</li>
 </ul>
 </td>
 </tr>
@@ -55,7 +55,7 @@ August 19, 2013
 </td>
 <td>
 <ul>
-<li><a href="documentation/rest/incidents.html">New incident endpoints</a> for changing state are available.</li>
+<li><a href="/documentation/rest/incidents">New incident endpoints</a> for changing state are available.</li>
 </ul>
 </td>
 </tr>
@@ -66,7 +66,7 @@ August 1, 2013
 </td>
 <td>
 <ul>
-<li><a href="documentation/rest/webhooks.html">Webhooks</a> are now generally available.</li>
+<li><a href="/documentation/rest/webhooks">Webhooks</a> are now generally available.</li>
 </ul>
 </td>
 </tr>
@@ -77,7 +77,7 @@ July 11, 2013
 </td>
 <td>
 <ul>
-<li><a href="documentation/rest/webhooks.html">Webhooks (Limited Release)</a> can now be queried through the API.</li>
+<li><a href="/documentation/rest/webhooks">Webhooks (Limited Release)</a> can now be queried through the API.</li>
 </ul>
 </td>
 </tr>
@@ -88,7 +88,7 @@ June 7, 2013
 </td>
 <td>
 <ul>
-<li><a href="documentation/rest/escalation_policies.html">Escalation Policies</a> can now be queried through the API.</li>
+<li><a href="/documentation/rest/escalation_policies/">Escalation Policies</a> can now be queried through the API.</li>
 </ul>
 </td>
 </tr>
@@ -99,7 +99,7 @@ June 1, 2013
 </td>
 <td>
 <ul>
-<li>Responses from the <a href="documentation/rest/users.html">Users</a> API can now optionally return notification rules and contact methods for users.</li>
+<li>Responses from the <a href="/documentation/rest/users/">Users</a> API can now optionally return notification rules and contact methods for users.</li>
 </ul>
 </td>
 </tr>
@@ -110,7 +110,7 @@ April 8, 2013
 </td>
 <td>
 <ul>
-<li><a href="documentation/rest/incidents/notes.html">Incident Notes</a> can now be queried and created through the API.</li>
+<li><a href="/documentation/rest/incidents/notes/">Incident Notes</a> can now be queried and created through the API.</li>
 </ul>
 </td>
 </tr>
@@ -121,7 +121,7 @@ February 01, 2013
 </td>
 <td>
 <ul>
-<li>The timezone which response datetimes are rendered in for <a href="documentation/rest/log_entries.html">Log Entry</a> queries can now be specified.</li>
+<li>The timezone which response datetimes are rendered in for <a href="/documentation/rest/log_entries/">Log Entry</a> queries can now be specified.</li>
 </ul>
 </td>
 </tr>
@@ -132,7 +132,7 @@ January 30, 2013
 </td>
 <td>
 <ul>
-<li><a href="documentation/rest/incidents/show.html">Incidents#show Api</a> released.</li>
+<li><a href="/documentation/rest/incidents/show">Incidents#show Api</a> released.</li>
 </ul>
 </td>
 </tr>
@@ -143,7 +143,7 @@ January 28, 2013
 </td>
 <td>
 <ul>
-<li><a href="documentation/rest/users/contact_methods.html">Contact Method</a> and <a href="documentation/rest/users/notification_rules.html">Notification Rules</a> APIs now show push notifications properly.</li>
+<li><a href="/documentation/rest/users/contact_methods/">Contact Method</a> and <a href="/documentation/rest/users/notification_rules/">Notification Rules</a> APIs now show push notifications properly.</li>
 </ul>
 </td>
 </tr>
@@ -154,7 +154,7 @@ December 7, 2012
 </td>
 <td>
 <ul>
-<li><a href="documentation/rest/alerts/list.html">Alerts</a> API now has filter parameter properly documented.</li>
+<li><a href="/documentation/rest/alerts/list">Alerts</a> API now has filter parameter properly documented.</li>
 </ul>
 </td>
 </tr>
@@ -165,7 +165,7 @@ December 6, 2012
 </td>
 <td>
 <ul>
-<li><a href="documentation/rest/users/create.html">User#create</a> has requester_id properly documented.</li>
+<li><a href="/documentation/rest/users/create">User#create</a> has requester_id properly documented.</li>
 </ul>
 </td>
 </tr>
@@ -176,7 +176,7 @@ November 26, 2012
 </td>
 <td>
 <ul>
-<li><a href="documentation/rest/services/email_filters.html">Email Filters</a>, used by email services, can now be queried and manipulated through the API.</li>
+<li><a href="/documentation/rest/services/email_filters/">Email Filters</a>, used by email services, can now be queried and manipulated through the API.</li>
 </ul>
 </td>
 </tr>
@@ -187,7 +187,7 @@ November 20, 2012
 </td>
 <td>
 <ul>
-<li><a href="documentation/rest/log_entries.html">Log Entries</a> can now be queried through the API.</li>
+<li><a href="/documentation/rest/log_entries/">Log Entries</a> can now be queried through the API.</li>
 </ul>
 </td>
 </tr>
@@ -198,7 +198,7 @@ November 19, 2012
 </td>
 <td>
 <ul>
-<li><a href="documentation/rest/services.html">Services</a> can now be queried and manipulated through the API.</li>
+<li><a href="/documentation/rest/services/">Services</a> can now be queried and manipulated through the API.</li>
 </ul>
 </td>
 </tr>
@@ -209,7 +209,7 @@ November 16, 2012
 </td>
 <td>
 <ul>
-<li>The since and until parameters for <a href="documentation/rest/incidents/list.html">Incidents#list</a> request are now properly documented as being not required</li>
+<li>The since and until parameters for <a href="/documentation/rest/incidents/list">Incidents#list</a> request are now properly documented as being not required</li>
 </ul>
 </td>
 </tr>
@@ -220,7 +220,7 @@ October 29, 2012
 </td>
 <td>
 <ul>
-<li>Showing requester_id parameter on curl examples, when they are required (which only happens when using the Api Key <a href="documentation/rest/authentication.html">authentication</a> mechanism, rather than basic authentication). Affected docs : <a href="documentation/rest/incidents/update.html">Incidents#update</a> and <a href="documentation/rest/maintenance_windows/create.html">MaintenanceWindows#create</a>.</li>
+<li>Showing requester_id parameter on curl examples, when they are required (which only happens when using the Api Key <a href="/documentation/rest/authentication">authentication</a> mechanism, rather than basic authentication). Affected docs : <a href="/documentation/rest/incidents/update">Incidents#update</a> and <a href="/documentation/rest/maintenance_windows/create">MaintenanceWindows#create</a>.</li>
 </ul>
 </td>
 </tr>
@@ -231,7 +231,7 @@ October 22, 2012
 </td>
 <td>
 <ul>
-<li>Showing requester_id as a top level parameter on <a href="documentation/rest/incidents/update.html">Incidents#update</a> and <a href="documentation/rest/maintenance_windows/create.html">MaintenanceWindows#create</a>.</li>
+<li>Showing requester_id as a top level parameter on <a href="/documentation/rest/incidents/update">Incidents#update</a> and <a href="/documentation/rest/maintenance_windows/create">MaintenanceWindows#create</a>.</li>
 </ul>
 </td>
 </tr>
@@ -242,7 +242,7 @@ September 28, 2012
 </td>
 <td>
 <ul>
-<li>Fixing wrong date format in schedules examples on <a href="documentation/rest/schedules/show.html">Schedules#show</a> and <a href="documentation/rest/schedules/users.html">Schedules#users</a>.</li>
+<li>Fixing wrong date format in schedules examples on <a href="/documentation/rest/schedules/show">Schedules#show</a> and <a href="/documentation/rest/schedules/users">Schedules#users</a>.</li>
 </ul>
 </td>
 </tr>
@@ -253,7 +253,7 @@ September 21, 2012
 </td>
 <td>
 <ul>
-<li>New APIs released for <a href="documentation/rest/maintenance_windows.html">Maintenance Windows</a>, allowing you to disable one or more services for a predetermined period of time.</li>
+<li>New APIs released for <a href="/documentation/rest/maintenance_windows/">Maintenance Windows</a>, allowing you to disable one or more services for a predetermined period of time.</li>
 </ul>
 </td>
 </tr>
@@ -287,7 +287,7 @@ September 12, 2012
 <td>
 <ul>
 <li>Fixed GET request curl formatting</li>
-<li>Better examples on <a href="documentation/rest/incidents/list.html">Incidents#list</a></li>
+<li>Better examples on <a href="/documentation/rest/incidents/list">Incidents#list</a></li>
 </ul>
 </td>
 </tr>
@@ -298,7 +298,7 @@ September 5, 2012
 </td>
 <td>
 <ul>
-<li>Improved error handling and messaging for multi-incident requests on <a href="documentation/rest/incidents/update.html">Incidents#update</a>.</li>
+<li>Improved error handling and messaging for multi-incident requests on <a href="/documentation/rest/incidents/update">Incidents#update</a>.</li>
 </ul>
 </td>
 </tr>
@@ -310,7 +310,7 @@ August 27, 2012
 <td>
 <ul>
 <li><a href="index.html">developer.pagerduty.com</a> site is live.</li>
-<li>New V1 APIs released for <a href="documentation/rest/alerts.html">Alerts</a>, <a href="documentation/rest/reports.html">Reports</a>, <a href="documentation/rest/schedules.html">Schedules</a> and <a href="documentation/rest/users.html">Users</a>.</li>
+<li>New V1 APIs released for <a href="/documentation/rest/alerts">Alerts</a>, <a href="/documentation/rest/reports">Reports</a>, <a href="/documentation/rest/schedules">Schedules</a> and <a href="/documentation/rest/users">Users</a>.</li>
 </ul>
 </td>
 </tr>
