--- a/source/documentation/rest/services/show.html
+++ b/source/documentation/rest/services/show.html
@@ -1,6 +1,9 @@
 ---
 title: PagerDuty Developer
 layout: main
+permalink: /documentation/rest/services/show/
+redirect_from:
+  - /documentation/rest/services/show.html
 ---
 <ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/services">Services</a></li><span class="divider">/</span><li>Show</li></ul>
 <div class='section'>
