Sort tools table by type

--- a/source/documentation/code/tools.html
+++ b/source/documentation/code/tools.html
@@ -19,7 +19,8 @@ nav:
                         <th>Description</th>
                       </tr>
                     </thead>
-                {% for tool in site.data.tools %}
+                {% assign tool_type = site.data.tools | sort: "type" %}
+                {% for tool in tool_type %}
                   {% if tool.tag == 'Tool' %}
                     <tr>
                       <td><a href="{{ tool.url }}"</a>{{ tool.name }}</td>
