Update partnership form URL

--- a/source/documentation/integration/events/index.html
+++ b/source/documentation/integration/events/index.html
@@ -18,7 +18,7 @@ redirect_from:
                     <p>The API was designed to allow you to easily integrate a monitoring system with a Service in PagerDuty. Monitoring systems generally send out events when problems are detected and when these problems have been resolved (fixed). Some more advanced systems also understand the concept of acknowledgements: problems can be acknowledged by an engineer to signal he or she is working on fixing the issue.</p>
                     <p>Since monitoring systems emit events, the API is based around accepting events. Incoming events (sent via the API) are routed to a PagerDuty service and processed. They may result in a new incident being created, or an existing incident being acknowledged or resolved.</p>
                     <p>The same event-based API can also be used to integrate a PagerDuty service with ticketing systems and various other software tools.</p>
-                    <p><strong>Interested in becoming a PagerDuty partner? Fill out <a href='https://pdconnect.wufoo.com/forms/z1ybj8dd0qwq9od/' target='_blank' title='this form'>this form</a> for more information.</strong></p>
+                    <p><strong>Interested in becoming a PagerDuty partner? Fill out <a href='http://www.pagerduty.com/partner-integrations/#section4' target='_blank' title='this form'>this form</a> for more information.</strong></p>
                     <h2>Getting Started</h2>
                     <p>The event integration API can be used with any "Generic API" service in PagerDuty. If you don't already have a "Generic API" service, you should create one:</p>
                     <ol>
