--- a/source/documentation/code/libraries.html
+++ b/source/documentation/code/libraries.html
@@ -14,7 +14,7 @@ nav:
 </h1>
 <p>
   A number of our users have contributed open source libraries:
-</p>{% for library in site.data.libraries %} {% endfor %}
+</p>
 <table class='table table-striped'>
   <thead>
     <tr>
@@ -29,17 +29,21 @@ nav:
       </th>
     </tr>
   </thead>
-  <tr>
-    <td>
-      <a href="{{%20library.url%20}}"></a>{{ library.name }}
-    </td>
-    <td>
-      {{ library.language }}
-    </td>
-    <td>
-      {{ library.description }}
-    </td>
-  </tr>
+  <tbody>
+  {% for library in site.data.libraries %}
+    <tr>
+      <td>
+        <a href="{{ library.url }}"></a>{{ library.name }}
+      </td>
+      <td>
+        {{ library.language }}
+      </td>
+      <td>
+        {{ library.description }}
+      </td>
+    </tr>
+  {% endfor %}
+  </tbody>
 </table>
 <p>
   Please review the <a href='/documentation/code/disclaimer'>Disclaimer</a> prior to downloading sample code.
