--- a/source/documentation/code/tools.html
+++ b/source/documentation/code/tools.html
@@ -14,7 +14,8 @@ nav:
 </h1>
 <p>
   A number of our users have built tools on top of PagerDuty:
-</p>{% assign tool_type = site.data.tools | sort: "type" %} {% for tool in tool_type %} {% if tool.tag == 'Tool' %} {% endif %} {% endfor %}
+</p>
+{% assign tool_type = site.data.tools | sort: "type" %}
 <table class='table table-striped'>
   <thead>
     <tr>
@@ -29,24 +30,28 @@ nav:
       </th>
     </tr>
   </thead>
-  <tr>
-    <td>
-      <a href="{{%20tool.url%20}}"></a>{{ tool.name }}
-    </td>
-    <td>
-      {{ tool.type }}
-    </td>
-    <td>
-      {{ tool.description }}
-    </td>
-  </tr>
+  <tbody>
+  {% for tool in tool_type %} {% if tool.tag == 'Tool' %}
+    <tr>
+      <td>
+        <a href="{{ tool.url }}"></a>{{ tool.name }}
+      </td>
+      <td>
+        {{ tool.type }}
+      </td>
+      <td>
+        {{ tool.description }}
+      </td>
+    </tr>
+  {% endif %} {% endfor %}
+  </tbody>
 </table>
 <h2>
   Toys
 </h2>
 <p>
   And here are some more fun things that people have built with our API:
-</p>{% for tool in site.data.tools %} {% if tool.tag == 'Toy' %} {% endif %} {% endfor %}
+</p>
 <table class='table table-striped'>
   <thead>
     <tr>
@@ -61,17 +66,21 @@ nav:
       </th>
     </tr>
   </thead>
-  <tr>
-    <td>
-      <a href="{{%20tool.url%20}}"></a>{{ tool.name }}
-    </td>
-    <td>
-      {{ tool.type }}
-    </td>
-    <td>
-      {{ tool.description }}
-    </td>
-  </tr>
+  <tbody>
+  {% for tool in site.data.tools %} {% if tool.tag == 'Toy' %}
+    <tr>
+      <td>
+        <a href="{{ tool.url }}"></a>{{ tool.name }}
+      </td>
+      <td>
+        {{ tool.type }}
+      </td>
+      <td>
+        {{ tool.description }}
+      </td>
+    </tr>
+  {% endif %} {% endfor %}
+  </tbody>
 </table>
 <p>
   Please review the <a href='/documentation/code/disclaimer'>Disclaimer</a> prior to downloading sample code.
