Fixed bugs with code samples loops
Not caused by HTML Tidy, but made more explicit (and guaranteeing browsers won't munge them together properly) by it.

--- a/source/documentation/code/index.html
+++ b/source/documentation/code/index.html
@@ -60,7 +60,7 @@ breadcrumbs: true
   {% for code in site.data.code %}
     <tr>
       <td>
-        <a href="{{ code.url }}"></a>{{ code.name }}
+        <a href="{{ code.url }}">{{ code.name }}</a>
       </td>
       <td>
         {{ code.description }}
