--- a/source/documentation/code/libraries.html
+++ b/source/documentation/code/libraries.html
@@ -33,7 +33,7 @@ nav:
   {% for library in site.data.libraries %}
     <tr>
       <td>
-        <a href="{{ library.url }}"></a>{{ library.name }}
+        <a href="{{ library.url }}">{{ library.name }}</a>
       </td>
       <td>
         {{ library.language }}
