Don't be pretentious (and wrong)

--- a/source/documentation/rest/maintenance_windows/list.html
+++ b/source/documentation/rest/maintenance_windows/list.html
@@ -83,7 +83,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
             No
           </td>
           <td>
-            An array of service IDs, specifying services whose maintenance windows shall be returned.
+            An array of service IDs, specifying services whose maintenance windows will be returned.
           </td>
         </tr>
         <tr>
