--- a/source/documentation/rest/maintenance_windows/list.html
+++ b/source/documentation/rest/maintenance_windows/list.html
@@ -88,6 +88,20 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
         </tr>
         <tr>
           <td>
+            teams
+          </td>
+          <td>
+            <a href="/documentation/rest/types#string">String</a>
+          </td>
+          <td>
+            No
+          </td>
+          <td>
+            A comma-separated list of team IDs, specifying teams whose maintenance windows will be returned.
+          </td>
+        </tr>
+        <tr>
+          <td>
             filter
           </td>
           <td>
@@ -110,6 +124,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
 <code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X GET -G \
     --data-urlencode "query=<span class='curl_params-query contenteditable' contenteditable='true'>ruby 1.9 migration</span>" \
     --data-urlencode "service_ids[]=<span class='curl_params-service_ids contenteditable' contenteditable='true'>PF9KMXH</span>" \
+    --data-urlencode "teams=<span class='curl_params-teams contenteditable' contenteditable='true'>P4QLGMN,P6XL8LK</span>" \
     --data-urlencode "filter=<span class='curl_params-filter contenteditable' contenteditable='true'>ongoing</span>" \
     "https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/maintenance_windows"</code>
 </pre>
