--- a/source/documentation/rest/incidents/count.html
+++ b/source/documentation/rest/incidents/count.html
@@ -156,6 +156,20 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
         </tr>
         <tr>
           <td>
+            teams
+          </td>
+          <td>
+            <a href="/documentation/rest/types#string">String</a>
+          </td>
+          <td>
+            No
+          </td>
+          <td>
+            A comma-separated list of team IDs, specifying teams whose maintenance windows will be returned.
+          </td>
+        </tr>
+        <tr>
+          <td>
             assigned_to_user
           </td>
           <td>
@@ -183,12 +197,13 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
     Examples
   </h2>
   <h4>
-    Fetch the total number of resolved incidents triggered over the last month.
+    Fetch the total number of resolved incidents triggered over the last month for the given teams.
   </h4>
   <pre>
 <code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X GET -G \
     --data-urlencode "since=<span class='curl_params-since contenteditable' contenteditable='true'>2011-04-01</span>" \
     --data-urlencode "until=<span class='curl_params-until contenteditable' contenteditable='true'>2011-05-01</span>" \
+    --data-urlencode "teams=<span class='curl_params-until contenteditable' contenteditable='true'>P4QLGMN,P6XL8LK</span>" \
     --data-urlencode "status=<span class='curl_params-status contenteditable' contenteditable='true'>resolved</span>" \
     "https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/incidents/count"</code>
 </pre>
