--- a/source/documentation/rest/services/list.html
+++ b/source/documentation/rest/services/list.html
@@ -60,6 +60,20 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
       <tbody>
         <tr>
           <td>
+            teams
+          </td>
+          <td>
+            <a href="/documentation/rest/types#string">String</a>
+          </td>
+          <td>
+            No
+          </td>
+          <td>
+            A comma-separated list of team IDs, specifying teams whose maintenance windows will be returned.
+          </td>
+        </tr>
+        <tr>
+          <td>
             include
           </td>
           <td>
@@ -390,6 +404,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
   </h3>
   <pre>
 <code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X GET -G \
+    --data-urlencode "teams=<span class='curl_params-teams contenteditable' contenteditable='true'>P4QLGMN,P6XL8LK</span>" \
     --data-urlencode "include[]=<span class='curl_params-include contenteditable' contenteditable='true'>escalation_policy</span>" \
     "https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/services"</code>
 </pre>
