Linkify EP include
Because it's nice.

--- a/source/documentation/rest/services/list.html
+++ b/source/documentation/rest/services/list.html
@@ -83,7 +83,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
             No
           </td>
           <td>
-            Include extra information in the response. Possible values are <code>escalation_policy</code> (for inline Escalation Policy) and <code>email_filters</code> (for inline <a href="/documentation/rest/services/email_filters">Email Filters</a>).
+            Include extra information in the response. Possible values are <code>escalation_policy</code> (for inline <a href="/documentation/rest/escalation_policies">Escalation Policies</a>) and <code>email_filters</code> (for inline <a href="/documentation/rest/services/email_filters">Email Filters</a>).
           </td>
         </tr>
         <tr>
