--- a/source/documentation/rest/services/list.html
+++ b/source/documentation/rest/services/list.html
@@ -83,7 +83,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
             No
           </td>
           <td>
-            Include extra information in the response. Possible values are <code>escalation_policy</code> (for inline <a href="/documentation/rest/escalation_policies">Escalation Policies</a>) and <code>email_filters</code> (for inline <a href="/documentation/rest/services/email_filters">Email Filters</a>).
+            Include extra information in the response. Possible values are <code>escalation_policy</code> (for inline <a href="/documentation/rest/escalation_policies">Escalation Policies</a>), <code>email_filters</code> (for inline <a href="/documentation/rest/services/email_filters">Email Filters</a>), and <code>teams</code> (for inline <a href="/documentation/rest/teams">Teams</a>).
           </td>
         </tr>
         <tr>
@@ -807,11 +807,12 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
 </pre>
   </div>
   <h3>
-    Example 2: Including Email Filters
+    Example 2: Including Email Filters and Teams
   </h3>
   <pre>
 <code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X GET -G \
     --data-urlencode "include[]=<span class='curl_params-include contenteditable' contenteditable='true'>email_filters</span>" \
+    --data-urlencode "include[]=<span class='curl_params-include contenteditable' contenteditable='true'>teams</span>" \
     "https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/services"</code>
 </pre>
   <h4>
@@ -849,6 +850,13 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
           "from_email_mode": "match",
           "from_email_regex": "[rR]yan",
           "id": "PCWKOPZ"
+        }
+      ],
+      "teams": [
+        {
+          "id": "P4QLGMN",
+          "name": "A Mob of Emus",
+          "description": "Marauding across Australia"
         }
       ]
     }
