--- a/source/documentation/rest/escalation_policies/list.html
+++ b/source/documentation/rest/escalation_policies/list.html
@@ -75,6 +75,20 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
             Filters the result, showing only the escalation policies whose names match the query.
           </td>
         </tr>
+        <tr>
+          <td>
+            teams
+          </td>
+          <td>
+            <a href="/documentation/rest/types#string">String</a>
+          </td>
+          <td>
+            No
+          </td>
+          <td>
+            A comma-separated list of team IDs, specifying teams whose maintenance windows will be returned.
+          </td>
+        </tr>
       </tbody>
     </table>
   </div>
@@ -348,10 +362,11 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
     Example
   </h3>
   <h3>
-    Get all escalation policies
+    Get all escalation policies on the given teams
   </h3>
   <pre>
 <code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X GET -G \
+    --data-urlencode "teams=<span class='curl_params-until contenteditable' contenteditable='true'>P4QLGMN,P6XL8LK</span>" \
     "https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/escalation_policies"</code>
 </pre>
   <p class="content-type-warning clearfix">
