--- a/source/documentation/rest/teams/list.html
+++ b/source/documentation/rest/teams/list.html
@@ -171,9 +171,8 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
     Get all teams
   </h3>
   <pre>
-        <code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X GET -G \
+<code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X GET -G \
     "https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/teams"</code>
-    
 </pre>
   <p class="content-type-warning clearfix">
     Note: <code>Content-type</code> of the request <strong>must</strong> be <code>application/json</code>
@@ -184,8 +183,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
   </h4>
   <div class="response">
     <pre>
-            <code class="language-javascript prettyprint linenums">
-{
+<code class="language-javascript prettyprint linenums">{
   "teams": [
     {
       "id": "PBAZLIU",
@@ -201,9 +199,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
   "limit": 100,
   "offset": 0,
   "total": 2
-}
-</code>
-        
+}</code>
 </pre>
   </div>
 </div>
