--- a/source/documentation/rest/teams/show.html
+++ b/source/documentation/rest/teams/show.html
@@ -96,9 +96,8 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
     Get a team
   </h3>
   <pre>
-        <code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X GET -G \
+<code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X GET -G \
     "https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/teams/<span class="sub_params_in_url-id id contenteditable" contenteditable="true">PBAZLIU</span>"</code>
-    
 </pre>
   <p class="content-type-warning clearfix">
     Note: <code>Content-type</code> of the request <strong>must</strong> be <code>application/json</code>
@@ -109,16 +108,13 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
   </h4>
   <div class="response">
     <pre>
-<code class="language-javascript prettyprint linenums">
-{
+<code class="language-javascript prettyprint linenums">{
   "team": {
     "id": "PBAZLIU",
     "name": "A Mob of Emus",
     "description": "Marauding across Australia"
   }
-}
-</code>
-        
+}</code>
 </pre>
   </div>
 </div>
