--- a/source/documentation/rest/teams/update.html
+++ b/source/documentation/rest/teams/update.html
@@ -149,8 +149,8 @@ PUT https://<span class="base_url contenteditable persist" contenteditable="true
     Update a team
   </h3>
   <pre>
-        <code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X PUT \
-    -d '{"name":"<span class="curl_params-name contenteditable" contenteditable="true">A Barrel of Monkeys</span>"}' \
+<code class="prettyprint language-bash curl">curl -H "Content-type: application/json" -H "Authorization: Token token=<span class="base_auth_token contenteditable persist" contenteditable="true">E7px6VVr3PVHZPJq51oa</span>" -X PUT \
+    -d '{ "name": "<span class="curl_params-name contenteditable" contenteditable="true">A Barrel of Monkeys</span>" }' \
     "https://<span class="base_url contenteditable persist" contenteditable="true">acme</span>.pagerduty.com/api/v1/teams/<span class="sub_params_in_url-id id contenteditable" contenteditable="true">PBAZLIU</span>"</code>
     
 </pre>
@@ -163,16 +163,13 @@ PUT https://<span class="base_url contenteditable persist" contenteditable="true
   </h4>
   <div class="response">
     <pre>
-            <code class="language-javascript prettyprint linenums">
-{
-  team: {
+<code class="language-javascript prettyprint linenums">{
+  "team": {
     "id": "PBAZLIU",
     "name": "A Barrel of Monkeys",
     "description": "Marauding across Australia",
   }
-}
-</code>
-        
+}</code>
 </pre>
   </div>
 </div>
